----------
v6.2.8-git
----------

[jan] Fix protocol name in POP3 example backend configuration.
[mms] Don't honor linked attachment limit configuration options if linked
      attachments are disabled (Bug #13665).


------
v6.2.7
------

[jan] Fix regression with not being able to list users (Bug #13808).
[mms] Fix rebuilding the folder tree translations when the language is changed
      in a session (Bug #13821).


------
v6.2.6
------

[jan] Fix adding addresses from address book popup (Bug #13806).
[mjr] Fix fatal error when viewing a vTodo with attendees.
[jan] Make dependency on File_ASN1 optional.
[mms] Fix double listing of mailboxes in certain instances when subscriptions
      are active and unsubscribed mailboxes are shown.


------
v6.2.5
------

[mms] Fix advanced search (Bug #13773).
[mjr] Fix handling of iTips indicating a change to a series exception (Bug
      #13777).
[mms] Fix parsing broken S/MIME messages that don't include the smime-type
      content-type parameter (Request #13661).
[mms] Fix regression when working with multiple selected messages with a POP3
      server (Bug #13759).
[mms] Only count successful compose mails when determining recipient limits
      (Bug #13751).


------
v6.2.4
------

[mms] Don't persist dynamic filter views across page reloads.
[mms] Fix message saving when using a POP3 server.
[jan] Fix JS error when using regexp characters in search string.
[mjr] Ensure we have a valid MIME part to display in thread view (Bug #13653).


------
v6.2.3
------

[mms] Fix handling authentication errors when they take place during an attempt
      to determine a mailbox's namespace.
[mms] Fix some folder display issues when not using IMAP subscriptions in
      dynamic view (Bug #13553).
[mms] Fix accessing dynamic compose page when file uploads are not available
      (Bug #13580).
[mms] Fix saving unique browser preferences for a specific backend in dynamic
      view.